2006-10-05  Adam Schreiber  <sadam@clemson.edu>

    * plugins/epiphany/seahorse-extension.c:
    * plugins/epiphany/mozilla/mozilla-helper.cpp: Fixed #356794

2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c: 
    * src/seahorse-key-manager-store.c: Fix problem with displaying 
    duplicated UIDs on a PGP key after looking at key's properties.
    Fixes #355380

2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-operation.c:
    * src/seahorse-pgp-source.c: Display error when keys to import are 
    created in the future. Fixes #356302
    
2006-09-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-key-set.c: Don't barf when the daemon sends us 
    'added' or 'changed' signals out of order. 
    * libseahorse/seahorse-secure-memory.c: Don't try to use secure memory
    when allocating secure memory failed.
    * libseahorse/seahorse-pgp-key-op.c: When changing password and password 
    is entered wrong X number of times, then cancel operation.
    
2006-09-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-ssh-generate.c:
    * src/seahorse-ssh-generate.glade:
    * src/seahorse-ssh-upload.c:
    * src/seahorse-ssh-upload.glade: Apply usability suggestions to 
    SSH dialogs from usability@gnome.org
     
2006-09-23 Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-ssh-source.c: Fixed setting of 
    error condition on success. Fixes #357315
    * src/seahorse-ssh-key-properties.glade:Fixed name for
    algo-label. Fixes #357316
    * libseahorse/seahorse-vfs-data.c: Changed permissions
    on created data. Fixes #357317

2006-09-20  Adam Schreiber  <sadam@clemson.edu>

    * plugins/epiphany/seahorse-extension.c: Fix segfault with context 
    menu on non-input callbacks.
    * plugins/applet/seahorse-applet.c: Fix decrypt error message. 
    * plugins/epiphany/seahorse-extension.c: Added decrypting and 