@@ -1,3 +1,8 @@
+2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* plugins/applet/seahorse-applet.c: Fix assertion when clipboard contains
+	plain text. Fixes #361897 
+
 2006-10-05  Adam Schreiber  <sadam@clemson.edu>
 
     * plugins/epiphany/seahorse-extension.c:
